# networkmanager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INetworkManager.h  Iconfiguration.patch  LegacyPlugin_NetworkAPIs.cpp  LegacyPlugin_NetworkAPIs.h  LegacyPlugin_WiFiManagerAPIs.cpp  LegacyPlugin_WiFiManagerAPIs.h  NETWORK_DELAY_ANALYSIS.md  NetworkManager.cpp  NetworkManager.h  NetworkManager.json  NetworkManagerConnectivity.cpp  NetworkManagerConnectivity.h  NetworkManagerGnomeEvents.cpp  NetworkManagerGnomeProxy.cpp  NetworkManagerGnomeUtils.cpp  NetworkManagerGnomeWIFI.cpp  NetworkManagerGnomeWIFI.h  NetworkManagerImplementation.cpp  NetworkManagerImplementation.h  NetworkManagerJsonEnum.h  NetworkManagerJsonRpc.cpp  NetworkManagerLogger.cpp  NetworkManagerLogger.h  NetworkManagerRDKProxy.cpp  NetworkManagerSecretAgent.cpp  NetworkManagerSecretAgent.h  NetworkManagerStunClient.cpp  NetworkManagerStunClient.h  SLEEP_3SEC_DELAY.md  UpnpDiscoveryManager.cpp  UpnpDiscoveryManager.h  WiFiSignalStrengthMonitor.cpp  WiFiSignalStrengthMonitor.h  p1.patch  tags
.github/: CODEOWNERS
cmake/: FindIARMBus.cmake  FindNFRTool.cmake  FindT2.cmake  Findbreakpad.cmake  Findrdklogger.cmake  Findtelemetry_msgsender.cmake  UnitTest.cmake
definition/: CMakeLists.txt  NetworkManager.json
docs/: CodeKnowledgeBase.md  NetworkManagerPlugin.md  PROJECT_OVERVIEW.md
gdbus/: NetworkManagerGdbusClient.cpp  (+10 more)
interface/: CMakeLists.txt  INetworkManager.h
legacy/: CMakeLists.txt  LegacyNetworkAPIs.conf.in  LegacyNetworkAPIs.config  LegacyNetworkAPIs.cpp  LegacyNetworkAPIs.h  LegacyWiFiManagerAPIs.conf.in  LegacyWiFiManagerAPIs.config  LegacyWiFiManagerAPIs.cpp  LegacyWiFiManagerAPIs.h
networkstats/: BUILD.md  CMakeLists.txt  CMakeLists.txt.backup  INetworkConnectionStats.h  INetworkData.h  Makefile  Module.h  NetworkConnectionStats.conf.in  NetworkConnectionStats.cpp  NetworkConnectionStats.cpp.old  NetworkConnectionStats.h  NetworkConnectionStats.json  NetworkConnectionStatsData.cpp  NetworkConnectionStatsImplementation.cpp  NetworkConnectionStatsImplementation.h  NetworkStatsDesign_ver1.md  README_INTERNAL_PLUGIN.md  THUNDER_PLUGIN_CONVERSION.md  THUNDER_PLUGIN_QUICK_REFERENCE.md  ThunderComRPCProvider.cpp  ThunderComRPCProvider.h  ThunderJsonRPCProvider.cpp  ThunderJsonRPCProvider.h  ThunderProvider.cpp  ThunderProvider.h  build.sh  thunder-jsonrpc-provider-test
networkstats/definition/: CMakeLists.txt  NetworkConnectionStats.json
networkstats/interface/: CMakeLists.txt  INetworkConnectionStats.h
networkstats/plugin/: CMakeLists.txt  INetworkData.h  Module.h  NetworkConnectionStats.conf.in  NetworkConnectionStats.config  NetworkConnectionStats.cpp  NetworkConnectionStats.h  NetworkConnectionStatsImplementation.cpp  NetworkConnectionStatsImplementation.h  NetworkConnectionStatsLogger.cpp  NetworkConnectionStatsLogger.h  NetworkDataProviderFactory.h  ThunderComRPCProvider.cpp  ThunderComRPCProvider.h  ThunderJsonRPCProvider.cpp  ThunderJsonRPCProvider.h
plugin/: CMakeLists.txt  Module.cpp  Module.h  NetworkManager.conf.in  NetworkManager.config  NetworkManager.cpp  NetworkManager.h  NetworkManagerConnectivity.cpp  NetworkManagerConnectivity.h  NetworkManagerConnectivityClient.cpp  NetworkManagerConnectivityClient.h  NetworkManagerImplementation.cpp  NetworkManagerImplementation.h  NetworkManagerJsonEnum.cpp  NetworkManagerJsonEnum.h  NetworkManagerJsonRpc.cpp  NetworkManagerLogger.cpp  NetworkManagerLogger.h  NetworkManagerPowerClient.cpp  NetworkManagerPowerClient.h  NetworkManagerSecretAgent.cpp  NetworkManagerSecretAgent.h  NetworkManagerStunClient.cpp  NetworkManagerStunClient.h  NetworkManagerTimer.h
plugin/gnome/: NetworkManagerGnomeEvents.cpp  NetworkManagerGnomeEvents.h  NetworkManagerGnomeMfrMgr.cpp  NetworkManagerGnomeMfrMgr.h  NetworkManagerGnomeProxy.cpp  NetworkManagerGnomeProxy.cpp.orig  NetworkManagerGnomeUtils.cpp  NetworkManagerGnomeUtils.h  NetworkManagerGnomeWIFI.cpp  NetworkManagerGnomeWIFI.h
plugin/gnome/gdbus/: NetworkManagerGdbusClient.cpp  NetworkManagerGdbusClient.h  NetworkManagerGdbusEvent.cpp  NetworkManagerGdbusEvent.h  NetworkManagerGdbusMgr.cpp  NetworkManagerGdbusProxy.cpp  NetworkManagerGdbusUtils.cpp  NetworkManagerGdbusUtils.h
plugin/gnome/scripts/: 20-connection-mtu-dhcp.conf  nm_interface_handler.sh
plugin/gnome/systemd/: gnome-networkmanager-mfrmgr-migration.conf  gnome-networkmanager-migration.conf  nm-powermanager.conf
plugin/rdk/: NetworkManagerRDKProxy.cpp  NetworkManagerRDKProxy.h
tests/l1Test/: CMakeLists.txt  l1_test_connectivity.cpp  l1_test_rdkproxy.cpp  l1_test_rdkproxyEvent.cpp  l1_test_routediscovery.cpp
tests/l2Test/: CMakeLists.txt  l2_test_LegacyPlugin_NetworkAPIs.cpp  l2_test_LegacyPlugin_WiFiManagerAPIs.cpp  l2_test_rdkproxy.cpp
tests/l2Test/legacy/: CMakeLists.txt  l2_test_LegacyPlugin_NetworkAPIs.cpp  l2_test_LegacyPlugin_WiFiManagerAPIs.cpp
tests/l2Test/libnm/: CMakeLists.txt  l2_test_libnmproxy.cpp  l2_test_libnmproxyEvent.cpp  l2_test_libnmproxyInit.cpp  l2_test_libnmproxyWifi.cpp
tests/l2Test/rdk/: CMakeLists.txt  l2_test_rdkproxy.cpp  l2_test_rdkproxyEvent.cpp  l2_test_rdkproxyImpl.cpp
tests/thunder/: CMakeLists.txt
tests/unittest/: CMakeLists.txt  test_LegacyPlugin_NetworkAPIs.cpp  test_LegacyPlugin_WiFiManagerAPIs.cpp  test_NetworkManager.cpp  test_NetworkManagerConnectivity.cpp  test_NetworkManagerStunClient.cpp  test_UpnpDiscoveryManager.cpp  test_WiFiSignalStrengthMonitor.cpp  unit_tests.cmake
tools/: CMakeLists.txt  (+1 more)
tools/nflog/: CMakeLists.txt
tools/nflog/src/: check_neighbor.c  check_neighbor.cpp  main.c  nflog.c  nflog_flow.html
tools/plugincli/: CMakeLists.txt  NetworkManagerGdbusTest.cpp  NetworkManagerLibnmTest.cpp
upnp/: CMakeLists.txt  UpnpDiscoveryManager.cpp  UpnpDiscoveryManager.h  getRouterInfo.sh  readyToGetRouterInfo.sh  upnpdiscover_interface@.service
upnp/Test/: test_UpnpDiscoveryManager.cpp
upnp/Tests/: CMakeLists.txt  test_UpnpDiscoveryManager.cpp
upnp/scripts/: getRouterInfo-NMdispatcher.sh  getRouterInfo-nlmon.sh  readyToGetRouterInfo.sh  routerdiscover_interface@.service
(+86 files in other folders)
